--- a/packages/wingsuit/apps/storybook/patterns/05-pages/article/article.twig
+++ b/packages/wingsuit/apps/storybook/patterns/05-pages/article/article.twig
@@ -1,37 +1,38 @@
-{{ pattern_preview('header') }}
-
-<main class="main-content w-full py-10 mt-20">
-  {% block content %}
-    {% embed '@templates/article/article.twig' with {
-      headline: 'Card Headline',
-      text: 'Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.'
-    } %}
-      {% block image %}
-        {% include "@atoms/image/image.twig" with {
-          variant: 'primary',
-          placeholder: false,
-          src: file_url('ws-assets://images/sample-image.png') ,
-        } %}
-      {% endblock %}
-      {% block button %}
-        {% include "@atoms/button/button.twig" with {
-          content: 'more',
-          variant: 'primary'
-        } %}
-      {% endblock %}
-      {% block more %}
-        <div class="w-full md:w-1/3 pr-2 mb-5">
-          {{ pattern_preview('card', 'default') }}
-        </div>
-        <div class="w-full md:w-1/3 px-2 mb-5">
-          {{ pattern_preview('card', 'default') }}
-        </div>
-        <div class="w-full md:w-1/3 pl-2 mb-5">
-          {{ pattern_preview('card', 'default') }}
-        </div>
-      {% endblock %}
-    {% endembed %}
-  {% endblock %}
-</main>
-
-{{ pattern_preview('footer') }}
+{% embed "@templates/site-container.twig"
+  with {
+    primary_menu: pattern_preview('menu', 'primary'),
+    footer_menu: pattern_preview('menu', 'footer')
+  }
+  %}
+{% block main %}
+  {% embed '@templates/article/article.twig' with {
+    headline: 'Card Headline',
+    text: 'Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.'
+  } %}
+    {% block image %}
+      {% include "@atoms/image/image.twig" with {
+        variant: 'primary',
+        placeholder: false,
+        src: file_url('ws-assets://images/sample-image.png') ,
+      } %}
+    {% endblock %}
+    {% block button %}
+      {% include "@atoms/button/button.twig" with {
+        content: 'more',
+        variant: 'primary'
+      } %}
+    {% endblock %}
+    {% block more %}
+      <div class="w-full md:w-1/3 pr-2 mb-5">
+        {{ pattern_preview('card', 'default') }}
+      </div>
+      <div class="w-full md:w-1/3 px-2 mb-5">
+        {{ pattern_preview('card', 'default') }}
+      </div>
+      <div class="w-full md:w-1/3 pl-2 mb-5">
+        {{ pattern_preview('card', 'default') }}
+      </div>
+    {% endblock %}
+  {% endembed %}
+{% endblock %}
+{% endembed %}
