Add base mdx templates.

--- a/packages/cli/src/generators/component/templates/ds/plain_only/pattern.stories.js.ejs
+++ b/packages/cli/src/generators/component/templates/ds/plain_only/pattern.stories.js.ejs
@@ -6,7 +6,7 @@ import mdx from './<%= name %>.mdx';
 const <%= name %>Template = require('./<%= name %>.twig');
 
 export default {
-  title: '<%= patternType %>/<%= capitalizeName %>',<% if (useDoc == 'mdx') { %>
+  title: '<%= capitalizeCleanPatternType %>/<%= capitalizeName %>',<% if (useDoc == 'mdx') { %>
   parameters: {
     docs: {
       page: mdx,
