WS #28: refactor organisms/footer.

--- a/packages/wingsuit/apps/storybook/patterns/05-pages/article/article.twig
+++ b/packages/wingsuit/apps/storybook/patterns/05-pages/article/article.twig
@@ -39,6 +39,9 @@
 </main>
 
 {% embed '@organisms/footer/footer.twig' %}
+  {% block slogan %}
+    {{ 'Wingsuit Flyer' }}
+  {% endblock %}
   {% block footer_menu %}
     {% include '@molecules/menu/menu.twig' with {items: footer_menu.items, variant: 'footer'} %}
   {% endblock %}
