--- a/packages/wingsuit/source/default/patterns/02-molecules/card/card.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/card/card.twig
@@ -9,6 +9,8 @@
   alignment: center
 #}
 {{ variant }}
+XX
+{{ variant }}
 {# Defaults: #}
 {% set element = element|default('div') %}
 {% set headline__element = headline__element|default('h2') %}
