--- a/packages/wingsuit/source/default/tokens/tokens.css
+++ b/packages/wingsuit/source/default/tokens/tokens.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: 'SourceSerif';
   src: local('Source Serif'),
-    url('fonts/source-sans/SourceSerifPro-Regular.woff2') format('woff2'),
-    url('fonts/source-sans/SourceSerifPro-Regular.woff') format('woff');
+    url('fonts/source-serif/SourceSerifPro-Regular.woff2') format('woff2'),
+    url('fonts/source-serif/SourceSerifPro-Regular.woff') format('woff');
   font-style: normal;
   font-weight: 400;
   font-display: auto;
@@ -11,15 +11,26 @@
 @font-face {
   font-family: 'SourceSerif';
   src: local('Source Serif'),
-    url('fonts/source-sans/SourceSerifPro-Bold.woff') format('woff'),
-    url('fonts/source-sans/SourceSerifPro-Bold.woff2') format('woff2');
+    url('fonts/source-serif/SourceSerifPro-Bold.woff') format('woff'),
+    url('fonts/source-serif/SourceSerifPro-Bold.woff2') format('woff2');
   font-style: normal;
   font-weight: 600;
   font-display: auto;
 }
 
+@font-face {
+  font-family: 'Roboto';
+  src: local('Roboto'),
+  url('fonts/roboto/roboto-v20-latin-regular.woff2') format('woff2'),
+  url('fonts/roboto/roboto-v20-latin-regular.woff') format('woff');
+  font-style: normal;
+  font-weight: 400;
+  font-display: auto;
+}
+
+
 body {
-  font-family: 'SourceSans';
+  font-family: 'Roboto';
   color: #4a4a4a;
 }
 
