WS #28: refactor organism.

--- a/packages/wingsuit/source/default/patterns/04-templates/site-container.twig
+++ b/packages/wingsuit/source/default/patterns/04-templates/site-container.twig
@@ -10,5 +10,9 @@
 </main>
 
 {% block footer %}
-  {% include "@organisms/footer/footer.twig" with {menu: footer_menu} %}
+  {% embed "@organisms/footer/footer.twig" with {menu: footer_menu} %}
+    {% block slogan %}
+      {{ 'Wingsuit flyer' }}
+    {% endblock %}
+  {% endembed %}
 {% endblock footer %}
