--- a/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
@@ -15,9 +15,8 @@
   variant == 'disabled' ? 'bg-disabled text-gray-xmedium',
   color,
 ] | sort | join(' ') | trim) }}>
-{{ content }}
+  {{ content|striptags }}
   {% if svg is not empty %}
-
     {% include "@atoms/svg/_svg--icon.twig" with {
       icon: svg,
       size: size,
