--- a/packages/wingsuit/source/default/patterns/03-organisms/footer/footer.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/footer/footer.twig
@@ -9,10 +9,14 @@
 <footer class="bg-primary w-full pt-13 pb-11">
   <div class="max-w-container mx-auto px-4 block md:flex justify-between text-center md:text-left">
     <div class="py-6  font-sans text-tiny text-gray-dark">
-      {{ "Gören & Ganoven"|t }}
+      {% block slogan %}
+        {{ slogan }}
+      {% endblock %}
     </div>
     <div class="flex">
-        {{ menu }}
+      {% block footer_menu %}
+        {{ footer_menu }}
+      {% endblock %}
     </div>
   </div>
 </footer>
