--- a/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
@@ -7,6 +7,7 @@
 {% endif %}
 {%- set content = content|render -%}
 <{{ element }} {{ attributes.addClass([
+  'button',
   'px-4', 'py-2', 'leading-18', 'font-serif', 'uppercase', 'inline-block',
   variant == 'primary' ? 'bg-primary text-white',
   variant == 'secondary' ? 'bg-secondary text-white',
