--- a/packages/wingsuit/source/default/patterns/02-molecules/menu/_menu--footer.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/menu/_menu--footer.twig
@@ -20,7 +20,7 @@
   <ul {{ attributes }} >
     {% for item in items %}
       <li class="font-sans px-4 pt-4 lg:text-center lg:border-b-0 lg:p-2 lg:px-4 uppercase border-b-0 font-sans text-gray-dark">
-        <a class="hover:border-b text-base" href="{{ item.link }}">{{ item.title }}</a>
+        <a class="hover:border-b text-base {% if (item.in_active_trail) %}is-active{% endif %}" href="{{ item.link }}">{{ item.title }}</a>
       </li>
     {% endfor %}
   </ul>
