WS #25: Refactor Atoms.

--- a/packages/wingsuit/source/default/patterns/01-atoms/hamburger/hamburger.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/hamburger/hamburger.twig
@@ -8,4 +8,4 @@
  *  - hamburger.invert [bool]: When set, colors will be inverted for light display on dark background.
  */
 #}
-<button class="ui-hamburger-02" :class="{'is-active': open}"></button>
+<div class="ui-hamburger-02" :class="{'is-active': open}"></div>
