--- a/packages/wingsuit/apps/storybook/patterns/05-pages/article/article.twig
+++ b/packages/wingsuit/apps/storybook/patterns/05-pages/article/article.twig
@@ -24,13 +24,13 @@
       {% block more %}
         {% embed '@organisms/grid/grid.twig' with {config_3: 'equal', columns: 3, gap: true, wrapper: false, width: 'large', padding_top: 'large', padding_bottom: 'large'} %}
           {% block column_1 %}
-            {{ pattern_preview('card', 'default') }}
+            {{ pattern_preview('card') }}
           {% endblock %}
           {% block column_2 %}
-            {{ pattern_preview('card', 'default') }}
+            {{ pattern_preview('card') }}
           {% endblock %}
           {% block column_3 %}
-            {{ pattern_preview('card', 'default') }}
+            {{ pattern_preview('card') }}
           {% endblock %}
         {% endembed %}
       {% endblock %}
