--- a/packages/wingsuit/source/default/patterns/04-templates/article/article.twig
+++ b/packages/wingsuit/source/default/patterns/04-templates/article/article.twig
@@ -1,5 +1,7 @@
 <div class="max-w-container px-4 m-auto">
-  <div class="text-center w-1/2 m-auto pb-8 text-gray-dark">{{ "Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups." }}</div>
+  <div class="text-center w-1/2 m-auto pb-8 text-gray-dark">
+    {{ "Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups." }}
+  </div>
   <div class="block md:flex group hover:no-underline">
     <div class="w-full md:w-1/2">
       {% block image %}
