--- a/packages/wingsuit/source/default/patterns/02-molecules/menu/_menu--primary.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/menu/_menu--primary.twig
@@ -14,22 +14,18 @@
   variant == 'primary',
   'block lg:flex flex-col md:flex-row md:items-center',
 ]) | sort | join(' ') | trim  %}
-{% set nav_clsses = [
+{% set nav_classes = [
   'block',
-  'lg:flex lg:bg-transparent',
-  'flex-col',
-  'bg-gray-xxlight',
+  'lg:flex flex-col',
+  'bg-gray-xxlight lg:bg-transparent',
   'pb-4',
 ] | sort | join(' ') | trim %}
-{% set list_clsses = [
+{% set list_classes = [
   'font-sans',
-  'px-4',
-  'pt-4',
-  'lg:text-center lg:border-b-0 lg:p-2 lg:px-4',
+  'px-4 pt-4 lg:p-2 lg:px-4',
+  'lg:border-b-0 border-b-0',
   'uppercase',
-  'border-b-0',
-  'font-sans',
-  'text-black'
+  'lg:text-center text-black'
 ] | sort | join(' ') | trim %}
 {# Defaults: #}
 {% set attributes = attributes|default(create_attribute()).addClass(classes) %}
@@ -38,7 +34,10 @@
   <ul {{ attributes }} >
     {% for item in items %}
       <li class="{{ list_classes }}">
-        <a class="hover:border-b text-base {% if (item.in_active_trail) %}is-active{% endif %}" href="{{ item.link }}">{{ item.title }}</a>
+        <a class="hover:border-b text-base
+           {% if (item.in_active_trail) %}is-active{% endif %}" href="{{ item.link }}">
+           {{ item.title }}
+        </a>
       </li>
     {% endfor %}
   </ul>
