--- a/packages/wingsuit/source/default/patterns/03-organisms/footer/footer.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/footer/footer.twig
@@ -5,15 +5,24 @@
  *
  */
 #}
+{% set container_classes = [
+  'max-w-container',
+  'mx-auto',
+  'px-4',
+  'block',
+  'md:flex justify-between',
+  'text-center md:text-left'
+] | sort | join(' ') | trim %}
 
 <footer class="bg-primary w-full pt-13 pb-11">
-  <div class="max-w-container mx-auto px-4 block md:flex
-              justify-between text-center md:text-left">
-    <div class="py-6  font-sans text-tiny text-gray-dark">
+  <div class="{{ container_classes }}">
+    <div class="py-6 font-sans text-tiny text-gray-dark">
       {{ "Gören & Ganoven"|t }}
     </div>
     <div class="flex">
+      {% block menu %}
         {{ menu }}
+      {% endblock %}
     </div>
   </div>
 </footer>
