--- a/packages/wingsuit/source/default/patterns/03-organisms/grid/grid.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/grid/grid.twig
@@ -72,7 +72,7 @@
     width == 'default' ? 'max-w-container': '',
     reverse == true ? 'flex-row-reverse' : '',
     'mx-auto flex flex-wrap',
-    gap == true ? '-px-10 md:-px-25': '',
+    gap == true ? '-mx-10 md:-mx-25': '',
   ] | sort | join(' ') | trim %}
   {% set attributes = attributes|default(create_attribute()).addClass(grid__classes) %}
   {% set wrapper__attributes = wrapper__attributes|default(create_attribute()).addClass(wrapper__classes) %}
