--- a/docs/src/components/Docs/Content/style.css
+++ b/docs/src/components/Docs/Content/style.css
@@ -2,21 +2,20 @@
   font-family: "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif;
   font-size: 17px;
   line-height: 25px;
-  margin: 40px 0;
+  margin: 20px 0;
   max-width: 700px;
   -webkit-font-smoothing: antialiased;
 }
 
 #docs-content .title {
-  font-size: 25px;
+  font-size: 30px;
   color: rgb(0, 0, 0);
   margin-bottom: 0;
-  line-height: 28px;
-  font-weight: 800;
+  line-height: 1.5;
 }
 
 #docs-content a.edit-link {
-  color: #E25E5E !important;
+  color: #319795 !important;
   font-size: 11px;
   text-transform: uppercase;
   font-weight: bold;
@@ -37,7 +36,7 @@
 }
 
 #docs-content .markdown h2 {
-  font-size: 28px;
+  font-size: 24px;
   margin: 30px 0 10px 0;
 }
 
