--- a/packages/wingsuit/source/default/patterns/02-molecules/menu/_menu--primary.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/menu/_menu--primary.twig
@@ -14,26 +14,14 @@
   variant == 'primary',
   'block lg:flex flex-col md:flex-row md:items-center',
 ]) | sort | join(' ') | trim  %}
-{% set nav_classes = [
-  'block',
-  'lg:flex flex-col',
-  'bg-gray-xxlight lg:bg-transparent',
-  'pb-4',
-] | sort | join(' ') | trim %}
-{% set list_classes = [
-  'font-sans',
-  'px-4 pt-4 lg:p-2 lg:px-4',
-  'lg:border-b-0 border-b-0',
-  'uppercase',
-  'lg:text-center text-black'
-] | sort | join(' ') | trim %}
+
 {# Defaults: #}
 {% set attributes = attributes|default(create_attribute()).addClass(classes) %}
 
-<nav class="{{ nav_classes }}" role="navigation">
+<nav class="block lg:flex flex-col bg-gray-xxlight lg:bg-transparent pb-4" role="navigation">
   <ul {{ attributes }} >
     {% for item in items %}
-      <li class="{{ list_classes }}">
+      <li class="font-sans px-4 pt-4 lg:p-2 lg:px-4 lg:border-b-0 border-b-0 uppercase lg:text-center text-black">
         <a class="hover:border-b text-base
            {% if (item.in_active_trail) %}is-active{% endif %}" href="{{ item.link }}">
            {{ item.title }}
