--- a/packages/wingsuit/source/default/patterns/01-atoms/svg/_svg--icon.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/svg/_svg--icon.twig
@@ -1,24 +1,10 @@
-{#
-/**
- * @file
- * svg--icon
- *
- * Available variables for svgicon:
- *    - icon [string]: String filename of the SVG to use from svg/
- *    - size [string]: Pass in a size tailwind utilities.
- *    Otherwise it will default to black.
- *    - svgicon.svgstroke [string]: Pass in a theme-color to colorize the SVG
- *      stroke. Otherwise stroke will be none.
+{% set attributes = attributes|default(create_attribute()) %}
 
- */
-#}
-
-{% set svg_classes = svg_classes|default([])|merge([
+<div {{ attributes.addClass([
   'svg',
   size != '' ? size,
   fill-color != '' ? fill-color ~ " fill-current"
-]) | sort | join(' ') | trim %}
-<div class="{{ svg_classes }}">
+] | sort | join(' ') | trim) }}>
   <svg viewBox="0 0 500 500">
     <use xlink:href="{{ file_url('ws-assets://images/spritemap.svg') }}#{{ icon }}"></use>
   </svg>
