--- a/packages/wingsuit/source/default/patterns/02-molecules/pagination/pagination.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/pagination/pagination.twig
@@ -1,22 +1,15 @@
-{% set classes = classes|default([])|merge([
-  variant == 'primary',
-  'flex flex-col lg:flex-row lg:items-center',
-]) | sort | join(' ') | trim  %}
-{# Defaults: #}
-{% set attributes = attributes|default(create_attribute()).addClass(classes) %}
-
-<nav class="flex flex-col bg-white" role="navigation">
-  <ul {{ attributes }}>
-    <li class="font-sans px-4 py-4 text-center border-gray-xlight border-t lg:border-t-0 lg:p-2 lg:px-4 uppercase border-b-0 font-sans text-gray-light">
-      <a class="hover:border-b text-lg lg:text-xs" href="{{ previous_url }}">{{ "Previous"|t }}</a>
+<nav class="flex flex-col bg-white items-center" role="navigation">
+  <ul class="flex flex-row">
+    <li class="font-sans px-4 py-4  lg:p-2 lg:px-4 text-gray-light">
+      <a class="text-md" href="{{ previous_url }}">{{ "Previous"|t }}</a>
     </li>
     {% for item in items %}
-      <li class="font-sans px-4 py-4 text-center border-gray-xlight border-t lg:border-t-0 lg:p-2 lg:px-4 uppercase border-b-0 font-sans text-gray-light">
-        <a class="hover:border-b text-lg lg:text-xs" href="{{ item.link }}">{{ item.title }}</a>
+      <li class="font-sans px-4 py-4 lg:p-2 lg:px-4 text-black">
+        <a class="text-md {% if (item.in_active_trail) %}is-active{% endif %}" href="{{ item.link }}">{{ item.title }}</a>
       </li>
     {% endfor %}
-    <li class="font-sans px-4 py-4 text-center border-gray-xlight border-t lg:border-t-0 lg:p-2 lg:px-4 uppercase border-b-0 font-sans text-black">
-      <a class="hover:border-b text-lg lg:text-xs" href="{{ next_url }}">{{ "Next"|t }}</a>
+    <li class="font-sans px-4 py-4  lg:p-2 lg:px-4 text-black">
+      <a class="text-md" href="{{ next_url }}">{{ "Next"|t }}</a>
     </li>
   </ul>
 </nav>
