WS #00: pagination and some updates.

--- a/packages/wingsuit/source/default/patterns/01-atoms/headline/headline.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/headline/headline.twig
@@ -4,7 +4,7 @@
 <{{ element }} {{ attributes.addClass([
   'headline',
   size == 'large' ? 'text-6xl',
-  size == 'medium' ? 'text-l',
+  size == 'medium' ? 'text-lg',
 ] | sort | join(' ') | trim) }}>
 {{ title_prefix }}
   {{ title_suffix }}
