Add remCalc to tailwind.config.

--- a/packages/wingsuit/source/default/patterns/01-atoms/headline/headline.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/headline/headline.twig
@@ -3,8 +3,8 @@
 
 <{{ element }} {{ attributes.addClass([
   'headline',
-  size == 'large' ? 'text-6xl',
-  size == 'medium' ? 'text-lg',
+  size == 'large' ? 'text-36',
+  size == 'medium' ? 'text-28',
 ] | sort | join(' ') | trim) }}>
 {{ title_prefix }}
   {{ title_suffix }}
