--- a/packages/wingsuit/source/default/patterns/02-molecules/card/card.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/card/card.twig
@@ -21,7 +21,7 @@
   </div>
   <div>
     {% if preheadline is not empty %}
-      <div class="font-serif text-4xl text-blue group-hover:underline">
+      <div class="font-serif text-36 text-blue group-hover:underline">
         {% block preheadline %}
           {{ preheadline }}
         {% endblock %}
