--- a/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
@@ -1,5 +1,5 @@
 <nav class="z-50 h-20 fixed w-full bg-green border-b lg:border-b-0 border-gray-xlight top-0" role="navigation" x-data="{ open: false }">
-  <div class="max-w-container relative mx-auto p-6 lg:py-6 lg:px-2 justify-between flex flex-wrap md:flex-no-wrap items-center">
+  <div class="max-w-1200 relative mx-auto p-6 lg:py-6 lg:px-2 justify-between flex flex-wrap md:flex-no-wrap items-center">
     <a href="{{ path('<front>') }}" class="mr-4 -mt-6 w-155 lg:mr-3 flex">
       {% include "@atoms/svg/_svg--icon.twig" with {
         size: 'w-20 h-16',
