--- a/packages/wingsuit/source/default/patterns/04-templates/article/article.twig
+++ b/packages/wingsuit/source/default/patterns/04-templates/article/article.twig
@@ -1,4 +1,4 @@
-<div class="max-w-container px-4 m-auto mt-20">
+<div class="max-w-1200 px-4 m-auto mt-20">
   <div class="text-center w-1/2 m-auto pb-8 text-gray-dark pt-10">
     {{ "Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups." }}
   </div>
