--- a/packages/wingsuit/source/default/patterns/03-organisms/grid/grid.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/grid/grid.twig
@@ -20,17 +20,25 @@
     equal: {default: 'flex flex-col w-full sm:w-1/2 md:w-1/5 mb-20 last:mb-0 md:mb-0'},
   }
 } %}
+{% set gap_sizes = {
+  none: '',
+  default: 'px-6 md:px-25',
+  large: 'px-10 md:px-35'
+} %}
 
-{% set gap_class_suffix = ['px-6', 'md:px-25'] %}
+{% set gap_negative_sizes = {
+  none: '',
+  default: '-mx-6 -md:mx-25',
+  large: '-mx-10 -md:mx-35'
+} %}
+
+{% set gap = gap|default('default') %}
 {% set config = _context['config_' ~ columns|default('2') ] %}
 {% set current_configuration = configuration[columns][config] %}
 
 {% if current_configuration is not empty %}
   {% set wrapper__classes = [
-    wrapper ? 'w-full px-20 relative': '',
-    text_color ? 'text-' ~ text_color,
-    bg ? bg: '',
-    bg_size != '' ? bg_size : 'bg-755',
+    bg,
     padding_top == 'half' ? 'pt-10 md:pt-20' : '',
     padding_top == 'default' ? 'pt-20 md:pt-40' : '',
     padding_top == 'doubled' ? 'pt-40 md:pt-80' : '',
@@ -38,25 +46,23 @@
     padding_top == 'large' ? 'md:pt-30 pt-20' : '',
     padding_top == 'medium' ? 'pt-20' : '',
     padding_top == 'small' ? 'pt-10' : '',
-    padding_bottom == 'half' ? 'pb-10 md:pb-20' : '',
     padding_bottom == 'default' ? 'pb-20 md:pb-40' : '',
-    padding_bottom == 'doubled' ? 'pb-40 md:pb-80' : '',
     padding_bottom == 'xlarge' ? 'pb-40' : '',
     padding_bottom == 'large' ? 'md:pb-30 pb-20' : '',
     padding_bottom == 'medium' ? 'pb-20' : '',
     padding_bottom == 'small' ? 'pb-10' : ''
   ] | sort | join(' ') | trim %}
-{#The grid width is defined here #}
+
   {% set grid__classes = [
-    width == 'small' ? 'max-w-xs': '',
-    width == 'medium' ? 'max-w-screen-md': '',
-    width == 'large' ? 'max-w-860': '',
-    width == 'xlarge' ? 'max-w-screen-lg': '',
-    width == 'default' ? 'max-w-container': '',
-    reverse == true ? 'flex-row-reverse' : '',
-    'mx-auto flex flex-wrap',
-    width != 'full' ? '-mx-6 md:-mx-25',
+    gap_negative_sizes[gap],
+    'flex flex-wrap',
   ] | sort | join(' ') | trim %}
+  {% set container__classes = [
+    width == 'large' ? 'max-w-1600': '',
+    width == 'default' ? 'max-w-1200': '',
+    'mx-auto'
+  ] | sort | join(' ') | trim %}
+
   {% set attributes = attributes|default(create_attribute()).addClass(grid__classes) %}
   {% set wrapper__attributes = wrapper__attributes|default(create_attribute()).addClass(wrapper__classes) %}
   {#The number of columns is set here #}
@@ -65,18 +71,18 @@
   {%- set column_3 -%}{%- block column_3 -%}{{ _context['column_3' ] }}{% endblock %}{% endset %}
   {%- set column_4 -%}{%- block column_4 -%}{{ _context['column_4' ] }}{% endblock %}{% endset %}
   {%- set column_5 -%}{%- block column_5 -%}{{ _context['column_5' ] }}{% endblock %}{% endset %}
-
   {% set wrappers_count = wrapper__attributes|length %}
 {% if wrappers_count != 0 %}
   <div {{ wrapper__attributes }}>
 {% endif %}
+  <div class="{{ container__classes }}">
   <div {{ attributes }}>
     {% block columns %}
       {%- for i in 1..columns -%}
         {% block column %}
           {% set column_classes = current_configuration[i] is not empty ? current_configuration[i] : current_configuration['default'] %}
-          {% if gap == true %}
-            {% set column_classes = column_classes ~ ' ' ~ gap_class_suffix|join(' ') %}
+          {% if gap != '' %}
+            {% set column_classes = column_classes ~ ' ' ~ gap_sizes[gap] %}
           {% endif %}
           <div class="{{ column_classes }}">
             {{ _context['column_' ~ i ] }}
@@ -84,6 +90,7 @@
         {% endblock %}
       {%- endfor -%}
     {% endblock %}
+  </div>
   </div>
 {% if wrappers_count != 0 %}
   </div>
