Update Button component.

--- a/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
@@ -1,22 +1,19 @@
-{% set element = element|default('div') %}
+{% set tag_name = tag_name|default('div') %}
 {% set attributes = attributes|default(create_attribute()) %}
 {% set svg_size = svg_size|default('default') %}
 {% if url is not empty %}
   {% set attributes = attributes.setAttribute('href', url) %}
-  {% set element = 'a' %}
+  {% set tag_name = 'a' %}
 {% endif %}
-{%- set content = content|render -%}
-<{{ element }} {{ attributes.addClass([
+
+<{{ tag_name }} {{ attributes.addClass([
   'button',
+  'font-sans',
   'px-4', 'py-2', 'leading-18', 'font-serif', 'uppercase', 'inline-block',
-  variant == 'primary' ? 'bg-primary text-white',
-  variant == 'secondary' ? 'bg-secondary text-white',
-  variant == 'success' ? 'bg-success text-white',
-  variant == 'warning' ? 'bg-warning text-white',
-  variant == 'disabled' ? 'bg-disabled text-gray-xmedium',
-  color,
+  variant == 'default' ? 'bg-' ~ color ~ ' border text-white transition-colors duration-150 hover:text-black hover:bg-white hover:border-' ~ color,
+  variant == 'hollow' ? 'bg-white border border-' ~ color ~ ' transition-colors duration-150 text-black hover:text-white hover:bg-' ~ color,
 ] | sort | join(' ') | trim) }}>
-{{ content }}
+{{ text }}
   {% if svg is not empty %}
     {% include "@atoms/svg/_svg--icon.twig" with {
       icon: svg,
@@ -24,4 +21,4 @@
       svg_classes: ['inline-block', 'align-middle', content|striptags ? 'ml-15', variant == 'outline' ? 'fill-red' : 'fill-white']
     } %}
   {% endif %}
-</{{ element }}>
+</{{ tag_name }}>
