--- a/packages/wingsuit/apps/drupal/templates/layout/page.html.twig
+++ b/packages/wingsuit/apps/drupal/templates/layout/page.html.twig
@@ -51,7 +51,7 @@
   primary_menu: page.primary_menu,
   footer_menu: page.footer
 } %}
-  {% block content %}
+  {% block main %}
     {{ page.content }}
   {% endblock %}
 {% endembed %}
