--- a/packages/wingsuit/apps/drupal/templates/misc/status-messages.html.twig
+++ b/packages/wingsuit/apps/drupal/templates/misc/status-messages.html.twig
@@ -33,14 +33,14 @@
 {% for type, messages in message_list %}
 
   <div role="contentinfo" aria-label="{{ status_heading[type] }}"{{ attributes|without('role', 'aria-label') }}>
-    {% embed '@atoms/alert/_alert.twig' %}
-      {% block alert_header %}
+    {% embed '@atoms/alert/alert.twig' %}
+      {% block header %}
         <a href="#" role="button" class="close" data-dismiss="alert" aria-label="{{ 'Close'|t }}"><span aria-hidden="true">&times;</span></a>
         {% if status_headings[type] %}
           <h2 class="sr-only">{{ status_headings[type] }}</h2>
         {% endif %}
-      {% endblock alert_header %}
-      {% block alert_content %}
+      {% endblock header %}
+      {% block content %}
         {% if messages|length > 1 %}
           {% for message in messages %}
             <div>{{ message }}</div>
@@ -48,9 +48,9 @@
         {% else %}
           <div>{{ messages|first }}</div>
         {% endif %}
-      {% endblock alert_content %}
-      {% block alert_footer %}
-      {% endblock alert_footer %}
+      {% endblock content %}
+      {% block footer %}
+      {% endblock footer %}
     {% endembed %}
   </div>
 {% endfor %}
